--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,5 +6,7 @@ spring.datasource.username=root
 spring.datasource.password=123456
 
 # 2. MyBatis配置Mapper XML路径
-mybatis.mapper-locations=classpath:mapper/SellerMapper.xml
+mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.example.shop.entity
+mybatis.configuration.map-underscore-to-camel-case=true
+
