--- a/frontend/shop-front/default.conf
+++ b/frontend/shop-front/default.conf
@@ -10,7 +10,7 @@ server {
 
     # 反向代理 API
     location /api/ {
-        proxy_pass http://backend:8080/api/; # backend 为后端容器名或主机地址
+        proxy_pass http://onlineshop-backend:8080/api/; # backend 为后端容器名或主机地址
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
