--- a/frontend/shop-front/package.json
+++ b/frontend/shop-front/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "shop-front",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "engines": {
-    "node": "^20.19.0 || >=22.12.0"
+  "dependencies": {
+    "@tinymce/tinymce-vue": "^6.3.0",
+    "@vueup/vue-quill": "^1.2.0",
+    "axios": "^1.4.0",
+    "dompurify": "^3.3.0",
+    "element-plus": "^2.3.0",
+    "pinia": "^2.1.0",
+    "quill": "^1.3.7",
+    "quill-delta-to-html": "^0.12.1",
+    "tinymce": "^8.2.0",
+    "vue": "^3.3.0",
+    "vue-quill-editor": "^3.0.6",
+    "vue-router": "^4.2.0",
+    "vue3-quill": "^0.3.1"
   },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
-  },
-  "dependencies": {
-    "axios": "^1.12.2",
-    "vue": "^3.5.22",
-    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
