feat(upgrade-a-customer-be): 客户升级完整功能（注册+历史订单查询+商家查看客户/购买记录）

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,3 +9,9 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.example.shop.entity
 mybatis.configuration.map-underscore-to-camel-case=true
 
+# 文件：src/main/resources/application.properties
+spring.jackson.property-naming-strategy=SNAKE_CASE
+
+media.upload-dir=D:/Onlineshop/backend/uploads
+media.base-url=http://localhost:8080/media
+
